This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.11.1.4
  Add wait cursor for undo and redo (#2039228)
  Add icon for "Open Conflict File" menu item (#2047054)
  BugFix: External editor command line switches did not work (#2037862)
  BugFix: Deleting/Moving file crashed WinMerge in debugger (#2025833)
  Bugfix: Lost focus after folder compare operations (#2046002)
  Bugfix: Some files had folder icons when aborting folder compare (#2018836)
  BugFix: Didn't select word-diff cyclically by pressing F4 key (#1989858)
  Translation updates:
  - Chinese Traditional (#2039929)
  - Japanese (r5805)

WinMerge 2.11.1.3 - 2008-08-04 (r5733)
  Rename color scheme menu item "None" and add separator (#2027300)
  Add -u commandline parameter as alternative to -ub (#2029275, #2030359)
  Remove RCLocalizationHelper plugin (#2029457)
  Clarify Supercopier caused hang in release notes (#2030040)
  Improve tree mode in folder compare (#2018836)
  Unlimited undo (#2033754)
  BugFix: Could change syntax highlight mode when highlighting was
    disabled from options (#2027325)
  BugFix: Editing line filters updated wrong filter (#2025130)
  BugFix: Boldfacing did work only for Courier font (#2000996)
  BugFix: Shift+Backspace didn't work in editor (#1153696)

WinMerge 2.11.1.2 - 2008-07-24 (r5673)
  Refresh compare after changing filter (#2017426)
  Add dialog listing available plugins (#2021722)
  Hierarchical directory comparison result view (#2018836)
  Add "Open Conflict" for file/folder compare menus (#2025472)
  Enable hierarchial folder compare view by default (#2025478)
  Confirmation dialog for move operations (#2026508)
  Manual: New build system (#2015434)
  Manual: Improve Opening Files and Folders (#2017901)