@@ -16,8 +16,9 @@ class IAbortable;
 struct DIFFITEM;
 struct DiffFuncStruct;
 
-int DirScan_GetItems(const PathContext &paths, const String &leftsubdir, const String &rightsubdir, DiffFuncStruct *myStruct,
-		bool casesensitive, int depth, DIFFITEM *parent);
+int DirScan_GetItems(const PathContext &paths, const String &leftsubdir,
+		bool bLeftUniq, const String &rightsubdir, bool bRightUniq, DiffFuncStruct *myStruct,
+		bool casesensitive, int depth, DIFFITEM *parent, bool bUniques);
 
 int DirScan_CompareItems(DiffFuncStruct *, POSITION parentdiffpos);
 int DirScan_CompareRequestedItems(DiffFuncStruct *, POSITION parentdiffpos);
