@@ -6,6 +6,7 @@ http://winmerge.org/tracker/[tracker-id]
 WinMerge 2.11.1.4
   Add wait cursor for undo and redo (#2039228)
   Add icon for "Open Conflict File" menu item (#2047054)
+  Include unique subfolder contents in recursive folder compare (#2034259)
   BugFix: External editor command line switches did not work (#2037862)
   BugFix: Deleting/Moving file crashed WinMerge in debugger (#2025833)
   Bugfix: Lost focus after folder compare operations (#2046002)
